# bangumi-tracker

./: .gitignore  config.toml.example  pyproject.toml  readme.md  todo.md
bangumi_tracker/: __init__.py  cli.py  configs.py  episode.py  rss.py  torrent.py
